@@ -19,6 +19,7 @@
     add View|Style|Thumbnails (global)
     add show_thumbnails socket property
     fix missing paths on command line hangs introduced in f167b283 #468
+    fix icon/compact view left-click doesn't unselect other files
 1.0.1   2015-05-04:
     extended bookmarks system
     added users manual Bookmarks section
